[package]
name = "ratrod"
version = "0.4.1"
edition = "2024"
authors = ["Aaron Roney <twitchax@gmail.com>"]
description = "A TCP tunneler that uses public / private key authentication with encryption."
license = "MIT"
repository = "https://github.com/twitchax/ratrod"

[lib]
name = "ratrodlib"
path = "src/lib.rs"

[[bin]]
name = "ratrod"
path = "src/bin.rs"

[dependencies]
tokio = { version = "1.43.0", default-features = false, features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
clap = { version = "4.5.31", features = ["derive"] }
anyhow = { version = "1.0.96" }
rand = { version = "0.9.0", default-features = false, features = ["thread_rng"] }
regex = { version = "1.11.1" }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "ansi"] }
ring = { version = "0.17.11", features = ["std"]}
base64 = { version = "0.22.1" }
futures = { version = "0.3.31" }
async-bincode = { version = "0.7.3" }
serde = { version = "1.0.218", features = ["derive"] }
homedir = { version = "0.3.4" }

[dev-dependencies]
pretty_assertions = "1.4.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false