[package]
name = "ratrod"
version = "0.6.1"
edition = "2024"
authors = ["Aaron Roney <twitchax@gmail.com>"]
description = "A TCP / UDP tunneler that uses public / private key authentication with encryption."
license = "MIT"
repository = "https://github.com/twitchax/ratrod"

[lib]
name = "ratrodlib"
path = "src/lib.rs"

[[bin]]
name = "ratrod"
path = "src/bin.rs"

[dependencies]
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
anyhow = { version = "1" }
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }
regex = { version = "1" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi"] }
ring = { version = "0.17", features = ["std"]}
base64 = { version = "0.22" }
futures = { version = "0.3" }
serde = { version = "1", features = ["derive"] }
homedir = { version = "0.3" }
secrecy = { version = "0.10" }
bincode = { version = "2" }
bytes = { version = "1" }
ouroboros = { version = "0.18" }

[dev-dependencies]
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
